fixed overflow x

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -21,8 +21,17 @@
     forwards; */
 }
 
+html,
+body {
+  margin: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 body {
   background-color: var(--background-color);
+  overflow-x: hidden;
 }
 
 @keyframes background-color-change {
