--- a/frontend/src/styles/Project.css
+++ b/frontend/src/styles/Project.css
@@ -1,7 +1,7 @@
 .projects-container {
   /* border: 1px solid powderblue; */
   margin-top: 3rem;
-  margin-bottom: 300px;
+  margin-bottom: 200px;
   display: flex;
   flex-direction: column;
   padding: 3rem;
@@ -28,7 +28,7 @@
   filter: brightness(0.7);
   margin-top: 15px;
   position: relative;
-  bottom: -130px;
+  bottom: -120px;
   z-index: 1;
 }
 
